- CHANGE: numeric time column name changed from `elapsed` to `time.num` (elapsed is not a good term, esp. for non-english speakers)
- FIX: fix for not appending new numeric time column onto a data.table
- FIX: fix for data.frames columns being renamed on return (by using data.frame instead of cbind)
- FIX: fix for not working with multiple date-time columns if one of them wasn't column 1

========================== convert_val() ============================
- New function
- For doing simple conversions between volume, time, mass, area and pressure units
- Integrates with functions that take some inputs in specific units, convert_rate() etc - see Examples

========================== calc_rate.bg() ============================
- CHANGE: output: `$bgrate` changed to `$rate.bg`
- CHANGE: output: `$mean` changed to `$rate.bg.mean`
- CHANGE: Stops if 'oxygen' or 'time' columns not present in the input, or conflict
- CHANGE: Removed "input detected" message at start - other functions don't have this

========================== inspect() ============================
- NEW: checks that each column contains numeric data. this is the most important check, and if any column fails, the function skips the reamining checks for that column and returns a NULL result
- NEW: added `width` input for rolling reg plot (default 0.1)
- NEW: `summary()` works on output (simply a wrapper for `print()`)
- NEW: Can pass 'rate.rev = FALSE' to plot rates not reversed (for oxygen production respirometry)
- NEW: Can pass 'legend = FALSE' to plot to suppress legend
- CHANGE: Multiple rate inspection plot improved. Now all plot on same axes ranges, better colours and spacing.
- CHANGE: Prints NA locations for all oxygen columns they are found in (previously only printed for first column)
- CHANGE: If multiple columns in input, message that 1:2 used by default by subsequent functions.
- CHANGE: Stops if 'oxygen' or 'time' columns not present in the input, or conflict
- CHANGE: prints on assigning